<resources>
    <string name="title_home">Rooms</string>
    <string name="title_dashboard">Routines</string>
    <string name="title_notifications">Alarm</string>
    <string name="app_name">Smart Home System</string>

    <string name="text_room_notification">There was a change in rooms! Click to view.</string>

    <string name="no_api_connection">Ops! There is an error connecting to the Server. Please make sure the server is running, and in the correct address.</string>

    <!-- Routine Mode -->
    <string name="no_routines">No Routines Have Been Added.</string>
    <string name="notification_title" translatable="false">Smart Home System</string>
    <string name="routines_notification_text">There was a change in routines! Click to view.</string>
    <string name="unable_routine_first">Unable to make </string>
    <string name="unable_routine_last"> action.</string>

    <!-- Alarm Modes -->
    <string name="home_mode">I\'m Home Mode</string>
    <string name="out_home_mode">Out of Home Mode</string>
    <string name="change_password">Change Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="title_activity_specific_room2" translatable="false">SpecificRoomActivity2</string>

    <string name="short_code">The code must be of 4 digits long</string>
    <string name="error_message">Error</string>
    <string name="no_devices_added">No Devices Added</string>
    <string name="alarm_code_warning">WARNING: The default code of the alarm is 1234, it is highly recommended that the you set your own alarm code before start activating any mode</string>
    <string name="enter_old_code">Enter Old Code</string>
    <string name="enter_new_code">Enter New Code</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="empty_field">The field cannot be empty</string>
    <string name="old_code_wrong">The old code is wrong</string>
    <string name="codes_dont_match">The codes don\'t match</string>
    <string name="code_changed">Code changed successfully</string>
    <string name="home_mode_activated">I\'m Home Mode activated succesfully!</string>
    <string name="out_home_mode_activated">Out of Home Mode activated successfully</string>
    <string name="disarm_mode_activated">Mode Deactivated Successfully</string>
    <string name="tool" translatable="false">tool</string>
    <string name="wrong_code">Wrong Code!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="alarm_not_created">The alarm it is not added. You can add it from the webpage.</string>
    <string name="pop_message">Please enter the alarm code</string>


    <string name="status">Current State</string>
    <string name="level">Current Level</string>
    <string name="lock_status">Current Lock State</string>
    <string name="mode">Current Mode</string>
    <string name="freezer_temperature">Freezer Temperature</string>
    <string name="temperature">Current Temperature</string>
    <string name="color">Current Color</string>
    <string name="see_color">Current Color</string>
    <string name="brightness">Current Brightness</string>
    <string name="interval">Current Set Interval</string>
    <string name="remaining">Remaining Time</string>
    <string name="heat">Current Heat Mode</string>
    <string name="grill">Current Grill Mode</string>
    <string name="convection">Current Convection Mode</string>
    <string name="vertical_swing">Current Vertical Swing Angle</string>
    <string name="horizontal_swing">Current Horizontal Swing Angle</string>
    <string name="fan_speed">Current Fan Speed</string>
    <string name="change_mode">Change Mode</string>
    <string name="change_temperature">Change Temperature</string>
    <string name="change_ftemperature">Change Freezer Temperature</string>
    <string name="edit">Edit</string>
    <string name="change_fan_speed">Change Fan Speed</string>
    <string name="change_freezer_temperature">Change Freezer Temperature</string>
    <string name="change_horizontal_swing">Change Horizontal Swing</string>
    <string name="change_vertical_swing">Change Vertical Swing</string>
    <string name="change_grill">Change Grill Option</string>
    <string name="change_heat">Change Heat</string>
    <string name="change_convection">Change Convection</string>
    <string name="no_rooms">No Rooms Have Been Added!</string>
    <string name="change_ip">Change IP Address</string>
    <string name="deactivated_mode">Deactivate Mode</string>
    <string name="prompt">Hi tell me your action!</string>
    <string name="no_internet_connection">Oops! Looks like there is an error in your connection! Please check it out and try again later.</string>
    <string name="no_connection_image">No Connection Image</string>
    <string name="room_device_change">There has been a change in </string>
    <string name="phrase_finish">Click to view.</string>
    <string name="changed_from">The Alarm mode changed from </string>
    <string name="changed_to"> to </string>
    <string name="disarm_mode">Deactivated</string>
    <string name="fake_room">Fake Room</string>
    <string name="refrigerator_mode">Actual Mode</string>
    <string name="change_interval">Change Interval Time</string>
</resources>
